[EDI-1102][editor]Fixed spinner, icon spin, z-index toasts (#174)
Fixed spinner animation
Fixed toasts hovered under modals which has had higher z-index value

Element which has display: inline won't be animating specially in Chrome. To properly animate element has to have display block or inline-block is also possible to inherit it from parent like in display:flex case added to parent. Now animation working properly.

--- a/src/shared/components/ui/Spinner/Spinner.module.scss
+++ b/src/shared/components/ui/Spinner/Spinner.module.scss
@@ -1,10 +1,7 @@
 .spinner {
-  i {
-    animation: spin 1s linear infinite;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(359deg); }
-}
+
