--- a/src/shared/styles/helpers/_z-index.scss
+++ b/src/shared/styles/helpers/_z-index.scss
@@ -4,7 +4,7 @@ $z-index-sidebar-workspaces: 7;
 $z-index-sidebar-workspaces-backdrop: 6;
 $z-index-product-updates: 9;
 $z-index-product-updates-backdrop: 8;
-$z-index-toast: 1000;
+$z-index-toast: 251002;
 $z-index-topbar: 4;
 $z-index-backdrop: 250996;
 $z-index-drawer: 998;
